# WikiRush

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yaml
backend/: README.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/api/v1/: __init__.py  achievements.py  games.py
backend/app/core/: __init__.py  config.py  seed_achievements.py
backend/app/models/: __init__.py  achievement.py
backend/app/schemas/: __init__.py  achievement.py  game.py
backend/app/services/: __init__.py  achievement_service.py  game_service.py  wikipedia_service.py
backend/tests/: conftest.py  test_achievements.py  test_auth.py  test_game.py
